Add henna mechanics
